// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewEvent on first page load renders the new event page without error messages. 1`] = `
<Main>
  <h3>
    This is the event form page!
  </h3>
  <EventFormComponent
    onSubmit={[Function]}
  />
</Main>
`;

exports[`NewEvent on submit invalid inputs renders the new event page without error messages. 1`] = `
<Main>
  <h3>
    This is the event form page!
  </h3>
  <ul>
    <li>
      nameを入力してください
    </li>
    <li>
      nameは１０文字以内です
    </li>
  </ul>
  <EventFormComponent
    onSubmit={[Function]}
  />
</Main>
`;
